# confidential-ml-utils

./: .licenserc.json  README.md  azure-pipelines.yml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql-analysis.yml  linter.yml  python.yml  pythonpackage.yml
docs/contributing/: README.md
docs/logging/: README.md  data-category.py  hello-world.py  prefix-stack-trace.py  try-except.py  with-statement.py
docs/rfc/: 01-logging.md
docs/samples/: README.md  hello-world.py  prefix-stack-trace.py  try-except.py
docs/snippets/: README.md
src/: .flake8  conftest.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
src/confidential-ml-utils/: metrics.py
src/confidential_ml_utils/: __init__.py  arguments.py  constants.py  exceptions.py  logging.py  run_wrapper.py  stackTraceExtractor.py
src/tests/: log.err  test_exceptions.py  test_logging.py  test_stackTraceExtractor.py
src/vs-code-snippets/: python.json
tests/: test_metrics.py
